[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Ahmed Ilyas"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.1.0"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
config = "0.13.2"
uuid = {version = "1.1.2", features = ["v4"] }
chrono = "0.4"
env_logger = "0.9.0"
log = "0.4.17"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
once_cell = "1.13.1"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.6"

[dev-dependencies]
reqwest = "0.11"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
